# brick-breaker

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  test.cpp  test.md  unique.cpp
docs/: class_diagram.md  class_diagram_final.html  class_diagram_final.md
src/: Balle.cpp  Balle.hpp  Raquette.cpp  Raquette.hpp  ball.cpp  ball.hpp  brick.cpp  brick.hpp  brickFactory.cpp  brickFactory.hpp  colors.hpp  gameManager.cpp  gameManager.hpp  main.cpp  main.hpp  main2.cpp  music.cpp  music.hpp  paddle.cpp  paddle.hpp  utils.cpp  utils.hpp
src/assets/: music.cpp  values.hpp
src/brick/: brick.cpp  brick.hpp  brickFactory.cpp  brickFactory.hpp
src/gameObject/: ball.cpp  ball.hpp  paddle.cpp  paddle.hpp
